--- a/.gitignore
+++ b/.gitignore
@@ -206,7 +206,12 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
+# Dev stuff
 .devenv/
 .devenv*
 .pre-commit-config.yaml
 
+
+# Outputs
+out.csv
+marvel-snap-archetype
