chore: add go to devenv

--- a/devenv.yaml
+++ b/devenv.yaml
@@ -4,4 +4,6 @@ inputs:
     inputs:
       nixpkgs:
         follows: nixpkgs
+  nixpkgs-unstable:
+    url: github:nixos/nixpkgs/nixpkgs-unstable
 backend: nix
